--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "photo-sphere-viewer",
-  "version": "0.0.0",
+  "name": "@AshwoodPT/photo-sphere-viewer",
+  "version": "0.0.1",
   "private": true,
   "license": "MIT",
   "workspaces": [
